--- a/src/main/webapp/template/layout.html
+++ b/src/main/webapp/template/layout.html
@@ -96,7 +96,7 @@
           <div th:if="${currentDoctor != null}">
           <ul class="nav">
             <li><a th:href="@{/}">Search Patient</a></li>
-            <li><a th:href="@{/(form)}">Add Patient</a></li>
+            <li><a th:href="@{/(add)}">Add Patient</a></li>
 
           </ul>
           </div>
