--- a/src/main/webapp/template/patient/detail.html
+++ b/src/main/webapp/template/patient/detail.html
@@ -5,14 +5,12 @@
   <body>
     <div layout:fragment="content">
         <div class="container">
-            <h1>Message : <span th:text="${patient.summary}">A short summary...</span></h1>
+            <h1>Patient Name : <span th:text="${patient.firstName}">A short summary...</span></h1>
             <dl>
                 <dt>ID</dt>
-                <dd id="id" th:text="${patient.id}">123</dd>
-                <dt>Date</dt>
-                <dd id="created" th:text="${#calendars.format(patient.created)}">July 11, 2012 2:17:16 PM CDT</dd>
-                <dt>Message</dt>
-                <dd id="message" th:text="${patient.message}">A detailed patient that is longer than the summary.</dd>
+                <dd id="id" th:text="${patient.patientId}">123</dd>
+                <dt>First Name</dt>
+                <dd id="firstName" th:text="${patient.firstName}">Patient First Name.</dd>
             </dl>
         </div>
     </div>
